Refactor variables in spanish to english